Back Button Added

--- a/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
@@ -18,10 +18,12 @@
 
     <!-- START CONTENT FRAME TOP -->
     <div class="content-frame-top">
-        <div class="page-title">
-            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Payable</h2>
+        <div class="col-md-12">
+            <div class="page-title">
+                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Payable</h2>
+            </div>          
+            </div>
         </div>
-    </div>
 
 </div>
 <!-- END CONTENT FRAME -->
