--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
@@ -23,10 +23,13 @@
 
     <!-- START CONTENT FRAME TOP -->
     <div class="content-frame-top">
-        <div class="page-title">
-            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Gift Voucher Management</h2>
+        <div class="col-md-12">
+            <div class="page-title">
+                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Gift Voucher Management</h2>
+            </div>
+            <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "GiftVoucher")'"><i class="fa fa-angle-double-left"></i> BACK</button>
+            </div>
         </div>
-    </div>
 
 </div>
 <!-- END CONTENT FRAME -->
