--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
@@ -79,10 +79,13 @@
 
     <!-- START CONTENT FRAME TOP -->
     <div class="content-frame-top">
-        <div class="page-title">
-            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Sales Return</h2>
+        <div class="col-md-12">
+            <div class="page-title">
+                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Sales Return</h2>
+            </div>
+            <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "SalesReturn")'"><i class="fa fa-angle-double-left"></i> BACK</button>
         </div>
-    </div>
+        </div>
 
 </div>
 <!-- END CONTENT FRAME -->
@@ -378,7 +381,7 @@
                         <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
                             <div class="btn-group">
                                 <button type="button" id="btnSaveSalesReturn" class="btn btn-success active">Save</button>
-                                <a class="btn btn-danger active" role="button" href="@Url.Action("Search", "SalesReturn")">Cancel </a>
+                                <a class="btn btn-danger active" role="button" href="@Url.Action("Index", "SalesReturn")">Cancel </a>
                             </div>
                         </div>
 
