Changed cookie info name.

--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -7,125 +7,22 @@
     <li class="xn-openable">
         <a href="#"><span class="fa fa-files-o"></span> <span class="xn-text">Masters</span></a>
         <ul class="animated zoomIn">
-            <li><a href="/Role/Index"><span class="fa fa-image"></span> Role Management</a></li>
-            <li><a href="/Category/Index"><span class="fa fa-users"></span> Category Management</a></li>
-            <li><a href="/Size/Index"><span class="fa fa-users"></span> Size Management</a></li>
-            <li><a href="/Brand/Index"><span class="fa fa-users"></span> Brand Management</a></li>
-            <li><a href="/Color/Index"><span class="fa fa-users"></span> Color Management</a></li>
-            <li><a href="/Tax/Index"><span class="fa fa-users"></span> Tax Management</a></li>
             <li><a href="/Branch/Search"><span class="fa fa-users"></span> Branch Management</a></li>
-            <li><a href="/Customer/Search"><span class="fa fa-users"></span> Customer Management</a></li>
-            <li><a href="/VendorContact/Search"><span class="fa fa-users"></span> Vendor Contact Management</a></li>
             <li><a href="/Employee/Search"><span class="fa fa-user"></span> Employee Management</a></li>
-            <li><a href="/Product/Search"><span class="fa fa-users"></span> Product Management</a></li>
-            <li><a href="/ProductWarehouse/Search"><span class="fa fa-users"></span> Product Warehouse</a></li>
-            @*<li><a href="/Replacement/Search"><span class="fa fa-users"></span> Replacement</a></li>*@ @*commented bya aditya as pre sanket instruction 26092016*@
-            <li><a href="/GiftVoucher/Search"><span class="fa fa-users"></span> Gift Voucher Management</a></li>
-            <li><a href="/Alteration/Search"><span class="fa fa-users"></span> Alteration Management</a></li>
-            <li><a href="/Payable/Index"><span class="fa fa-users"></span>Payable</a></li>
-            <li><a href="/Receivable/Index"><span class="fa fa-users"></span>Receivable</a></li>
-
-
+            <li><a href="/Role/Index"><span class="fa fa-image"></span> Role Management</a></li>
+            <li><a href="/Brand/Index"><span class="fa fa-users"></span> Brand Management</a></li>
+            <li><a href="/Category/Index"><span class="fa fa-users"></span> Category Management</a></li>
+            <li><a href="/Color/Index"><span class="fa fa-users"></span> Color Management</a></li>
+            <li><a href="/Size/Index"><span class="fa fa-users"></span> Size Management</a></li>     
+            <li><a href="/Tax/Index"><span class="fa fa-users"></span> Tax Management</a></li>        
+            <li><a href="/Customer/Search"><span class="fa fa-users"></span> Customer Management</a></li>
             <li><a href="/Vendor/Search"><span class="fa fa-users"></span> Vendor Management</a></li>
-            <li class="xn-openable">
-                <a href="#"><span class="fa fa-clock-o"></span> Timeline</a>
-                <ul>
-                    <li><a href="pages-timeline.html"><span class="fa fa-align-center"></span> Default</a></li>
-                    <li><a href="pages-timeline-simple.html"><span class="fa fa-align-justify"></span> Full Width</a></li>
-                </ul>
-            </li>
-            <li class="xn-openable">
-                <a href="#"><span class="fa fa-envelope"></span> Mailbox</a>
-                <ul class="animated zoomIn">
-                    <li><a href="pages-mailbox-inbox.html"><span class="fa fa-inbox"></span> Inbox</a></li>
-                    <li><a href="pages-mailbox-message.html"><span class="fa fa-file-text"></span> Message</a></li>
-                    <li><a href="pages-mailbox-compose.html"><span class="fa fa-pencil"></span> Compose</a></li>
-                </ul>
-            </li>
-            <li><a href="pages-messages.html"><span class="fa fa-comments"></span> Messages</a></li>
-            <li><a href="pages-calendar.html"><span class="fa fa-calendar"></span> Calendar</a></li>
-            <li><a href="pages-tasks.html"><span class="fa fa-edit"></span> Tasks</a></li>
-            <li><a href="pages-content-table.html"><span class="fa fa-columns"></span> Content Table</a></li>
-            <li><a href="pages-faq.html"><span class="fa fa-question-circle"></span> FAQ</a></li>
-            <li><a href="pages-search.html"><span class="fa fa-search"></span> Search</a></li>
-            <li class="xn-openable">
-                <a href="#"><span class="fa fa-file"></span> Blog</a>
-
-                <ul>
-                    <li><a href="pages-blog-list.html"><span class="fa fa-copy"></span> List of Posts</a></li>
-                    <li><a href="pages-blog-post.html"><span class="fa fa-file-o"></span>Single Post</a></li>
-                </ul>
-            </li>
-            <li class="xn-openable">
-                <a href="#"><span class="fa fa-sign-in"></span> Login</a>
-                <ul>
-                    <li><a href="pages-login.html">App Login</a></li>
-                    <li><a href="pages-login-website.html">Website Login</a></li>
-                    <li><a href="pages-login-website-light.html"> Website Login Light</a></li>
-                </ul>
-            </li>
-            <li class="xn-openable">
-                <a href="#"><span class="fa fa-warning"></span> Error Pages</a>
-                <ul>
-                    <li><a href="pages-error-404.html">Error 404 Sample 1</a></li>
-                    <li><a href="pages-error-404-2.html">Error 404 Sample 2</a></li>
-                    <li><a href="pages-error-500.html"> Error 500</a></li>
-                </ul>
-            </li>
+            <li><a href="/VendorContact/Search"><span class="fa fa-users"></span> Vendor Contact Management</a></li>
+            <li><a href="/Product/Search"><span class="fa fa-users"></span> Product Management</a></li>
+            <li><a href="/ProductWarehouse/Search"><span class="fa fa-users"></span> Warehouse</a></li>
+            @*<li><a href="/Replacement/Search"><span class="fa fa-users"></span> Replacement</a></li>*@ @*commented bya aditya as pre sanket instruction 26092016*@
         </ul>
     </li>
-    <li class="xn-openable">
-        <a href="#"><span class="fa fa-file-text-o"></span> <span class="xn-text">Layouts</span></a>
-        <ul class="animated zoomIn">
-            <li><a href="layout-boxed.html">Boxed</a></li>
-            <li><a href="layout-nav-toggled.html">Navigation Toggled</a></li>
-            <li><a href="layout-nav-top.html">Navigation Top</a></li>
-            <li><a href="layout-nav-right.html">Navigation Right</a></li>
-            <li><a href="layout-nav-top-fixed.html">Top Navigation Fixed</a></li>
-            <li><a href="layout-nav-custom.html">Custom Navigation</a></li>
-            <li><a href="layout-frame-left.html">Frame Left Column</a></li>
-            <li><a href="layout-frame-right.html">Frame Right Column</a></li>
-            <li><a href="layout-search-left.html">Search Left Side</a></li>
-            <li><a href="blank.html">Blank Page</a></li>
-        </ul>
-    </li>
-    <li class="xn-openable">
-        <a href="#"><span class="fa fa-cogs"></span> <span class="xn-text">UI Kits</span></a>
-        <ul class="animated zoomIn">
-            <li><a href="ui-widgets.html"><span class="fa fa-heart"></span> Widgets</a></li>
-            <li><a href="ui-elements.html"><span class="fa fa-cogs"></span> Elements</a></li>
-            <li><a href="ui-buttons.html"><span class="fa fa-square-o"></span> Buttons</a></li>
-            <li><a href="ui-panels.html"><span class="fa fa-pencil-square-o"></span> Panels</a></li>
-            <li><a href="ui-icons.html"><span class="fa fa-magic"></span> Icons</a><div class="informer informer-warning">+679</div></li>
-            <li><a href="ui-typography.html"><span class="fa fa-pencil"></span> Typography</a></li>
-            <li><a href="ui-portlet.html"><span class="fa fa-th"></span> Portlet</a></li>
-            <li><a href="ui-sliders.html"><span class="fa fa-arrows-h"></span> Sliders</a></li>
-            <li><a href="ui-alerts-popups.html"><span class="fa fa-warning"></span> Alerts & Popups</a></li>
-            <li><a href="ui-lists.html"><span class="fa fa-list-ul"></span> Lists</a></li>
-            <li><a href="ui-tour.html"><span class="fa fa-random"></span> Tour</a></li>
-        </ul>
-    </li>
-    <li class="xn-openable">
-        <a href="#"><span class="fa fa-pencil"></span> <span class="xn-text">Forms</span></a>
-        <ul class="animated zoomIn">
-            <li>
-                <a href="form-layouts-two-column.html"><span class="fa fa-tasks"></span> Form Layouts</a>
-                <div class="informer informer-danger">New</div>
-                <ul>
-                    <li><a href="form-layouts-one-column.html"><span class="fa fa-align-justify"></span> One Column</a></li>
-                    <li><a href="form-layouts-two-column.html"><span class="fa fa-th-large"></span> Two Column</a></li>
-                    <li><a href="form-layouts-tabbed.html"><span class="fa fa-table"></span> Tabbed</a></li>
-                    <li><a href="form-layouts-separated.html"><span class="fa fa-th-list"></span> Separated Rows</a></li>
-                </ul>
-            </li>
-            <li><a href="form-elements.html"><span class="fa fa-file-text-o"></span> Elements</a></li>
-            <li><a href="form-validation.html"><span class="fa fa-list-alt"></span> Validation</a></li>
-            <li><a href="form-wizards.html"><span class="fa fa-arrow-right"></span> Wizards</a></li>
-            <li><a href="form-editors.html"><span class="fa fa-text-width"></span> WYSIWYG Editors</a></li>
-            <li><a href="form-file-handling.html"><span class="fa fa-floppy-o"></span> File Handling</a></li>
-        </ul>
-    </li>
-
     @*Addition by swapnali | Date:14/09/2016*@
     <li class="xn-openable">
         <a href="/Employee/ChangeBranch"><span class="fa fa-map-marker"></span> <span class="xn-text">Change Branch</span></a>
@@ -142,7 +39,10 @@
             <li><a href="/PurchaseInvoice/Search"><span class="fa fa-users"></span> Purchase Invoice </a></li>
             <li><a href="/SalesOrder/Search"><span class="fa fa-users"></span> Sales Invoice</a></li>
             <li><a href="/SalesReturn/Search"><span class="fa fa-users"></span> Sales Return </a></li>
-
+            <li><a href="/GiftVoucher/Search"><span class="fa fa-users"></span> Gift Voucher Management</a></li>
+            <li><a href="/Alteration/Search"><span class="fa fa-users"></span> Alteration Management</a></li>
+            <li><a href="/Payable/Index"><span class="fa fa-users"></span>Payable</a></li>
+            <li><a href="/Receivable/Index"><span class="fa fa-users"></span>Receivable</a></li>
         </ul>
     </li>
 
