--- a/MyLeoRetailer/Views/PostLogin/AutocompleteLookup/_Lookup.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/AutocompleteLookup/_Lookup.cshtml
@@ -11,7 +11,7 @@
     <div class="col-md-12">
         <div class="">
             <div class="table-responsive">
-                <div style="height: 300px; overflow-y: auto;">
+                <div class="scroll" style="height: 300px; overflow: auto;">
                     <table class="table table-hover" style="margin-bottom: 0;">
                         <thead>
                             <tr id="subhead">
