--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Search.cshtml
@@ -87,7 +87,16 @@
 
         </div>
 
-        <div class="col-md-12" style="padding: 0px;" id="divTable">
+        <div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
+
+        </div>
+
+        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divPurchaseOrderRequestPager">
+
+
+        </div>
+
+        @*<div class="col-md-12" style="padding: 0px;" id="divTable">
             <div class="row">
                 <div class="table-responsive" style="width:100%; margin: 0px 0;">
                     <table class="table table-bordered table-hover" id="tblPurchaseOrderRequest">
@@ -102,21 +111,18 @@
                         </thead>
                         <tbody></tbody>
                     </table>
-                </div><!-- /.col -->
+                </div>
             </div>
-        </div>
+        </div>*@
 
+     
 
-        <div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
-
-        </div>
-
-        <input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
+        @*<input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
 
         <div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divPurchaseOrderRequestPager">
 
 
-        </div>
+        </div>*@
 
     </div>
 
