--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
@@ -135,10 +135,24 @@
 
                                 <input type="hidden" class="form-control input-sm" name="SalesReturn.Sales_Return_Id" id="hdf_SalesReturn_Id">
 
-                                <div class="col-md-3">
+                                @*<div class="col-md-3">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">GR No.</span>
                                         <input type="text" class="form-control input-sm" name="SalesReturn.Sales_Return_No" id="txtReturn_No" placeholder="Enter GR No" />
+                                    </div>
+                                </div>*@
+
+
+                                <div class="col-md-3">
+
+                                    <div class="form-group auto-complete">
+                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch</span>
+                                        <div class="input-group">
+                                            <input type="text" class="form-control invoice-filter autocomplete-text" name="SalesReturn.Branch_Name" id="textSales_Branch_Name" placeholder="Enter Branch to search" value="" data-table="Branch" data-col="Branch_ID,Branch_Name" data-headernames="Branch">
+                                            <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                            <input type="hidden" id="hdnBranchID" value="" name="SalesReturn.Branch_Id" class="auto-complete-value" />
+                                            <input type="hidden" id="hdnBranchName" value="" name="SalesReturn.Branch_Name" class="auto-complete-label" />
+                                        </div>
                                     </div>
                                 </div>
 
