--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Search.cshtml
@@ -58,7 +58,7 @@
 
                                 <div class="btn-group">                                   
                                     <a class="btn btn-success active" role="button" href="@Url.Action("Index", "SalesReturn")">Create </a>
-                                    <button role="button" class="btn btn-info active" id="btnView">View Details</button>
+                                    <button role="button" class="btn btn-danger active" id="btnView">View</button>
 
                                 </div>
 
