Login (select at least one branch)

--- a/MyLeoRetailer/Views/PreLogin/Login/Index.cshtml
+++ b/MyLeoRetailer/Views/PreLogin/Login/Index.cshtml
@@ -71,7 +71,7 @@
                         <input type="hidden" id="hdnBranch_Ids" name="Cookies.Branch_Ids" value="" />
                     </div>
                     <label style="color: #b64645; display:none;" class="help-block pull-right" id="lblBranchError">User having no branches.</label>
-
+                    <label style="color: #b64645; display:none;" class="help-block pull-right" id="lblLoginError">Select at least one branche.</label>
                 </form>
             </div>
             <div class="login-footer">
